Fix overflow for mobile

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -34,6 +34,10 @@ body {
   }
 }
 
+#main-container {
+  overflow: hidden;
+}
+
 .hexagram {
   width: 100%;
   margin: 0 auto;
